--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -41,6 +41,25 @@
         android:padding="5dp"
         android:src="@mipmap/player_back_btn" />
 
+    <TextView
+        android:id="@+id/resumedVideoTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selection_bg"
+        android:layout_toRightOf="@+id/closeButton"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:textSize="12sp"
+        android:visibility="gone"
+        android:text="Resumed Video"
+        android:textColor="@color/white_opycity_hundred_present"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
