--- a/app/src/main/res/layout/balaji_no_controller_video_player_layout.xml
+++ b/app/src/main/res/layout/balaji_no_controller_video_player_layout.xml
@@ -13,49 +13,210 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
-        app:controller_layout_id="@layout/balaji_no_controller_exo_playback_control_view"
+        app:use_controller="false"
         app:resize_mode="fill" />
 
-    <LinearLayout
-        android:id="@+id/errorRetryLayout"
+
+    <RelativeLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/black"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:layoutDirection="ltr">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <View
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Something went wrong."
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
+            android:alpha=".4"
+            android:background="#CC212121" />
 
-        <TextView
-            android:layout_width="wrap_content"
+
+
+
+        <RelativeLayout
+            android:id="@+id/videoMenuLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tap to retry"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="7dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="7dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/volumeLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@id/exo_play"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_balaji_pause" />
+
+                <ImageView
+                    android:id="@id/exo_pause"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:visibility="gone"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_balaji_play" />
 
 
-    <LinearLayout
-        android:id="@+id/bufferingProgressBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:visibility="gone">
 
-        <ProgressBar
-            android:layout_width="wrap_content"
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/moreInfoLinearLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="15dp"
+                    android:orientation="horizontal">
+
+
+                    <ImageView
+                        android:id="@id/info"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:src="@drawable/ic_info" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="More Info"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="12sp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/white_opycity_hundred_present"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+
+
+                <LinearLayout
+                    android:id="@+id/volumeLinearLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/volumeUnMuteButton"
+                        android:layout_width="25dp"
+                        android:layout_height="23dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="10dp"
+                        android:visibility="gone"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_balaji_volume_on" />
+
+
+                    <ImageView
+                        android:id="@+id/volumeMuteAndUnMuteButton"
+                        android:layout_width="25dp"
+                        android:layout_height="23dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="10dp"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_balaji_volume_off"
+                        android:visibility="visible" />
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:id="@id/video_progress_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminateTint="@android:color/white"
-            android:indeterminateTintMode="src_atop" />
+            android:layout_above="@+id/videoMenuLayout"
+            android:layout_marginLeft="5dp"
+            android:orientation="vertical">
 
-    </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/previewFrameLayout"
+                android:layout_width="120dp"
+                android:layout_height="70dp"
+                android:background="@drawable/video_frame"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/previewImageView"
+                    android:layout_width="120dp"
+                    android:layout_height="70dp"
+                    android:scaleType="fitXY" />
+
+            </FrameLayout>
+
+
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:id="@+id/progress_bar_parent"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="match_parent">
+
+            <ProgressBar
+                android:id="@+id/brightness_progress_bar"
+                style="@style/Widget.ProgressBar.Vertical"
+                android:layout_width="12dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginStart="16dp"
+                android:visibility="gone" />
+
+            <!--
+                    <ProgressBar
+                        android:id="@+id/volume_progress_bar"
+                        style="@style/Widget.ProgressBar.Vertical"
+                        android:layout_width="12dp"
+                        android:layout_height="100dp"
+                        android:visibility="gone"
+                        android:layout_gravity="center_vertical|end"
+                        android:layout_marginEnd="16dp" />
+            -->
+
+        </FrameLayout>
+
+    </RelativeLayout>
 
 
 
