--- a/app/src/main/res/layout/track_selection_dialog.xml
+++ b/app/src/main/res/layout/track_selection_dialog.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
-        android:scrollbars="none">
+        android:scrollbars="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,21 +31,23 @@
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
+               android:layout_marginTop="10dp"
                android:orientation="vertical">
+
+               <com.google.android.material.tabs.TabLayout
+                   android:id="@+id/track_selection_dialog_tab_layout"
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   app:tabGravity="fill"
+                   app:tabMode="fixed" />
 
 
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/track_selection_dialog_view_pager"
                    android:layout_width="match_parent"
-                   android:layout_height="match_parent"
+                   android:layout_height="360dp"
                    android:minHeight="360dp">
 
-                   <com.google.android.material.tabs.TabLayout
-                       android:id="@+id/track_selection_dialog_tab_layout"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       app:tabGravity="fill"
-                       app:tabMode="fixed" />
 
                </androidx.viewpager.widget.ViewPager>
            </LinearLayout>
