--- a/app/src/main/res/layout/track_selection_dialog.xml
+++ b/app/src/main/res/layout/track_selection_dialog.xml
@@ -16,6 +16,17 @@
         android:textSize="25sp"
         android:textStyle="bold" />
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/track_selection_dialog_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:tabGravity="fill"
+        app:tabTextColor="@color/white_opycity_swenty_present"
+        app:tabSelectedTextColor="@color/white"
+        app:tabIndicatorColor="@color/white"
+        android:background="@drawable/tracks_selector_bg"
+        app:tabMode="fixed" />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,14 +44,6 @@
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
-
-               <com.google.android.material.tabs.TabLayout
-                   android:id="@+id/track_selection_dialog_tab_layout"
-                   android:layout_width="match_parent"
-                   android:layout_height="50dp"
-                   app:tabGravity="fill"
-                   app:tabMode="fixed" />
-
 
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/track_selection_dialog_view_pager"
@@ -66,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:text="@android:string/cancel"
                     android:textColor="@color/text_color"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <Button
@@ -76,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:text="@android:string/ok"
                     android:textColor="@color/text_color"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
