--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -244,7 +244,7 @@
 
             <ImageView
                 android:id="@+id/epsodeButton"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
@@ -255,7 +255,7 @@
 
             <ImageView
                 android:id="@+id/epsodeNextButton"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:visibility="gone"
