--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -227,7 +227,7 @@
         android:layout_marginLeft="7dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
 
@@ -246,8 +246,8 @@
 
             <ImageView
                 android:id="@+id/epsodeButton"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:padding="5dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
@@ -258,8 +258,8 @@
 
             <ImageView
                 android:id="@+id/epsodeNextButton"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:padding="5dp"
                 android:layout_gravity="center"
                 android:visibility="gone"
@@ -271,11 +271,11 @@
             <ImageView
                 android:id="@+id/volumeUpDownBUtton"
                 android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="5dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
                 android:background="@android:color/transparent"
+                android:padding="5dp"
                 android:src="@drawable/ic_balaji_volume_on" />
 
             <SeekBar
